--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -93,8 +93,7 @@ jobs:
         shell: pwsh
         run: |
           $PsJson = @(ConvertFrom-Yaml -Yaml (Get-Content -Raw "Bicep/ACS/config/podFailure.yaml") | ConvertTo-Json -Compress)
-          echo "JSONACTIONEXPERIMENT=${{ $PsJson }}" >> $GITHUB_ENV
-          echo "::set-output name=json::$PsJson"
+          echo $PsJson | Out-File -FilePath $Env:GITHUB_ENV -Encoding utf-8 -Append
 
       # Print Json
       - name: Print Json
