--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -84,15 +84,10 @@ jobs:
 
       - id: set_var
         run: |
-          content=`cat ./Bicep/ACS/config/podFailure.json`
-          # the following lines are only required for multi line json
-          content="${content//'%'/'%25'}"
-          content="${content//$'\n'/'%0A'}"
-          content="${content//$'\r'/'%0D'}"
-          # end of optional handling for multi line json
-          echo "::set-output name=packageJson::$content"
+          JSON=$(cat ./your.json)
+          echo "::set-output name=matrix::${JSON//'%'/'%25'}"
       - run: |
-          echo "${{fromJson(steps.set_var.outputs.packageJson).version}}"
+          echo "${{fromJson(steps.set_var.outputs.matrix)}}"
       # # Install PowerShell Module
       # - name: Install PowerShell Module
       #   shell: pwsh
