--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,11 +18,11 @@ env:
   JSONACTIONEXPERIMENT:           ""    
 
 # # Controls when the workflow will run
-# on:
-#   # Triggers the workflow on push or pull request events but only for the main branch
-#   push:
-#     branches: [ master ]
 on:
+  # Triggers the workflow on push or pull request events but only for the main branch
+  push:
+    branches: [ Prod ]
+
   workflow_dispatch:
     inputs:
       CONTAINERREGISTRYNAME:
@@ -84,7 +84,7 @@ jobs:
 
       - id: set_var
         run: |
-          JSON=$(cat ./your.json)
+          JSON=$(cat ./Bicep/ACS/config/podFailure.json)
           echo "::set-output name=matrix::${JSON//'%'/'%25'}"
       - run: |
           echo "${{fromJson(steps.set_var.outputs.matrix)}}"
