--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -71,34 +71,32 @@ jobs:
         with:
           creds: ${{ secrets.AZURE_CREDENTIALS }}
 
-      # Set env to Input 
-      - name: Set the value
-        id: step_one
-        run: |
-          echo "CONTAINERREGISTRYNAME=${{ github.event.inputs.CONTAINERREGISTRYNAME }}" >> $GITHUB_ENV
-          echo "REPOSITORYNAME=${{ github.event.inputs.REPOSITORYNAME }}" >> $GITHUB_ENV
-          echo "AGENTVMSIZE=${{ github.event.inputs.AGENTVMSIZE }}" >> $GITHUB_ENV
-          echo "IMAGETAG=${{ github.event.inputs.IMAGETAG }}" >> $GITHUB_ENV
-          echo "IMAGEREPLICAS=${{ github.event.inputs.IMAGEREPLICAS }}" >> $GITHUB_ENV
-
-      - id: set_var
-        run: |
-          JSON=$(cat ./Bicep/ACS/config/podFailure.json)
-          echo "::set-output name=matrix::${{JSON//'%'/'%25'}}"
-      - run: |
-          echo "${{fromJson(steps.set_var.outputs.matrix)}}"
-      # # Install PowerShell Module
-      # - name: Install PowerShell Module
-      #   shell: pwsh
-      #   run: Install-Module powershell-yaml -Force
-
-      # # Convrt Yaml to Json      
-      # - name: Convrt Yaml to Json      
-      #   id: converter
-      #   shell: pwsh
+      # # Set env to Input 
+      # - name: Set the value
+      #   id: step_one
       #   run: |
-      #     $PsJson = @(ConvertFrom-Yaml -Yaml (Get-Content -Raw "Bicep/ACS/config/podFailure.yaml") | ConvertTo-Json -Compress)
-      #     echo $PsJson | Out-File -FilePath $Env:GITHUB_ENV -Encoding utf-8 -Append
+      #     echo "CONTAINERREGISTRYNAME=${{ github.event.inputs.CONTAINERREGISTRYNAME }}" >> $GITHUB_ENV
+      #     echo "REPOSITORYNAME=${{ github.event.inputs.REPOSITORYNAME }}" >> $GITHUB_ENV
+      #     echo "AGENTVMSIZE=${{ github.event.inputs.AGENTVMSIZE }}" >> $GITHUB_ENV
+      #     echo "IMAGETAG=${{ github.event.inputs.IMAGETAG }}" >> $GITHUB_ENV
+      #     echo "IMAGEREPLICAS=${{ github.event.inputs.IMAGEREPLICAS }}" >> $GITHUB_ENV
+
+      # - id: set_var
+      #   run: |
+      #     JSON=$(cat ./Bicep/ACS/config/podFailure.json)
+      #     echo "::set-output name=matrix::${JSON//'%'/'%25'}"
+      # - run: |
+      #     echo "${{fromJson(steps.set_var.outputs.matrix)}}"
+
+      # Deploy Chaos Experiment      
+      - name: Deploy Chaos Experiment      
+        id: converter
+        shell: pwsh
+        run: |
+          Install-Module powershell-yaml -Force
+          $RESOURCE_GROUP = ${{ secrets.AZURE_RG }}
+          $PsJson = @(ConvertFrom-Yaml -Yaml (Get-Content -Raw "Bicep/ACS/config/podFailure.yaml") | ConvertTo-Json -Compress)
+          az deployment group create --resource-group $RESOURCE_GROUP --template-file Bicep/ACS/mainACS.bicep
 
       # # Print Json
       # - name: Print Json
